# bayestest

./: Makefile  README.md  pyproject.toml
bayestest/: __init__.py  bayestest.py  cli.py  engine.py  reporting.py
examples/: bookings.py
tests/: test_engine.py
